--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,6 +101,7 @@ if(UNIX)
     # be BUILD_VERBOSE_FLAGS
     if(${BUILD_VERBOSE_FLAGS})
         add_definitions(-Wall -Wextra -pedantic -Wno-unused-parameter)
+        set(VERBOSE 1)
     endif()
 
 
@@ -171,7 +172,6 @@ set(ROLAND_PIXMAPS_DIR  "${ROLAND_DATADIR}")
 set(CPACK_CMAKE_GENERATOR "Unix Makefiles")
 set(CPACK_GENERATOR "STGZ;TGZ;TZ")
 set(CPACK_INSTALL_CMAKE_PROJECTS "${CMAKE_BINARY_DIR};${PACKAGE_NAME};ALL;/")
-set(CPACK_NSIS_DISPLAY_NAME "${PACKAGE_TITLE} ${PACKAGE_VERSION} ${CMAKE_BUILD_TYPE}")
 set(CPACK_OUTPUT_CONFIG_FILE "${CMAKE_BINARY_DIR}/CPackConfig.cmake")
 set(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_SOURCE_DIR}/README.md")
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Amstrad Emulator based on Caprice Source rewritten in C++")
@@ -179,7 +179,7 @@ set(CPACK_PACKAGE_EXECUTABLES "${PACKAGE_NAME};${PACKAGE_TITLE}")
 set(CPACK_PACKAGE_FILE_NAME "${PACKAGE_NAME}-${PACKAGE_VERSION}")
 set(CPACK_PACKAGE_INSTALL_DIRECTORY "${PACKAGE_NAME}-${PACKAGE_VERSION}")
 set(CPACK_PACKAGE_INSTALL_REGISTRY_KEY "${PACKAGE_NAME}-${PACKAGE_VERSION}")
-set(CPACK_PACKAGE_NAME ${PACKAGE_NAME})
+set(CPACK_PACKAGE_NAME ${PACKAGE_NAME}-${CMAKE_SYSTEM})
 set(CPACK_PACKAGE_CONTACT "Fred Klaus <development@fkweb.de")
 set(CPACK_PACKAGE_VENDOR  "Fred Klaus <development@fkweb.de")
 set(CPACK_PACKAGE_VERSION ${PACKAGE_VERSION})
@@ -196,21 +196,30 @@ set(CPACK_TOPLEVEL_TAG "Linux-x86_64")
 set(CPACK_SOURCE_IGNORE_FILES ".directory;.git/;3rdparty/;build/;doc/")
 set(CPACK_PACKAGING_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})
 
-set(CPACK_RPM_PACKAGE_NAME "${PACKAGE_NAME}")
+set(CPACK_RPM_PACKAGE_NAME "${PACKAGE_NAME}-${CMAKE_SYSTEM}")
 set(CPACK_RPM_PACKAGE_VERSION "${PACKAGE_VERSION}")
 set(CPACK_RPM_PACKAGE_MAINTAINER "Fred Klaus") #required
 set(CPACK_RPM_PACKAGE_REQUIRES "libSDL-1_2-0 >= 1.2, libSDL_image-1_2-0 >= 1.2")
 set(CPACK_RPM_PACKAGE_GROUP "System/Emulators/PC")
 set(CPACK_RPM_PACKAGE_URL "https://www.rolandemu.de")
 
-set(CPACK_DEBIAN_PACKAGE_NAME "${PACKAGE_NAME}")
+set(CPACK_DEBIAN_PACKAGE_NAME "${PACKAGE_NAME}-${CMAKE_SYSTEM}")
 set(CPACK_DEBIAN_PACKAGE_VERSION "${PACKAGE_VERSION}")
 set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Fred Klaus") #required
 set(CPACK_DEBIAN_PACKAGE_DEPENDS "libsdl-image1.2 (>= 1.2), libsdl1.2debian (>= 1.2)")
 set(CPACK_DEBIAN_PACKAGE_GROUP "System/Emulators/PC")
 set(CPACK_DEBIAN_PACKAGE_URL "https://www.rolandemu.de")
 
-set(CPACK_GENERATOR "RPM;DEB")
+set(CPACK_NSIS_PACKAGE_NAME "${PACKAGE_NAME}-${CMAKE_SYSTEM}")
+set(CPACK_NSIS_DISPLAY_NAME "${PACKAGE_TITLE}")
+set(CPACK_NSIS_CONTACT "development@rolandemu.de")
+
+if(UNIX)
+    set(CPACK_GENERATOR "RPM;DEB")
+else()
+    set(CPACK_GENERATOR "NSIS")
+endif()
+
 include(CPack)
 
 
