--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -177,10 +177,10 @@ set(CPACK_OUTPUT_CONFIG_FILE "${CMAKE_BINARY_DIR}/CPackConfig.cmake")
 set(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_SOURCE_DIR}/README.md")
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Amstrad Emulator based on Caprice Source rewritten in C++")
 set(CPACK_PACKAGE_EXECUTABLES "${PACKAGE_NAME};${PACKAGE_TITLE}")
-set(CPACK_PACKAGE_FILE_NAME "${PACKAGE_NAME}-${PACKAGE_VERSION}")
+set(CPACK_PACKAGE_FILE_NAME "${PACKAGE_NAME}-${PACKAGE_VERSION}-${CMAKE_SYSTEM}")
 set(CPACK_PACKAGE_INSTALL_DIRECTORY "${PACKAGE_NAME}-${PACKAGE_VERSION}")
 set(CPACK_PACKAGE_INSTALL_REGISTRY_KEY "${PACKAGE_NAME}-${PACKAGE_VERSION}")
-set(CPACK_PACKAGE_NAME ${PACKAGE_NAME}-${CMAKE_SYSTEM})
+set(CPACK_PACKAGE_NAME ${PACKAGE_NAME})
 set(CPACK_PACKAGE_CONTACT "Fred Klaus <development@fkweb.de")
 set(CPACK_PACKAGE_VENDOR  "Fred Klaus <development@fkweb.de")
 set(CPACK_PACKAGE_VERSION ${PACKAGE_VERSION})
@@ -197,21 +197,21 @@ set(CPACK_TOPLEVEL_TAG "Linux-x86_64")
 set(CPACK_SOURCE_IGNORE_FILES ".directory;.git/;3rdparty/;build/;doc/")
 set(CPACK_PACKAGING_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})
 
-set(CPACK_RPM_PACKAGE_NAME "${PACKAGE_NAME}-${CMAKE_SYSTEM}")
+set(CPACK_RPM_PACKAGE_NAME "${PACKAGE_NAME}")
 set(CPACK_RPM_PACKAGE_VERSION "${PACKAGE_VERSION}")
 set(CPACK_RPM_PACKAGE_MAINTAINER "Fred Klaus") #required
 set(CPACK_RPM_PACKAGE_REQUIRES "libSDL-1_2-0 >= 1.2, libSDL_image-1_2-0 >= 1.2")
 set(CPACK_RPM_PACKAGE_GROUP "System/Emulators/PC")
 set(CPACK_RPM_PACKAGE_URL "https://www.rolandemu.de")
 
-set(CPACK_DEBIAN_PACKAGE_NAME "${PACKAGE_NAME}-${CMAKE_SYSTEM}")
+set(CPACK_DEBIAN_PACKAGE_NAME "${PACKAGE_NAME}")
 set(CPACK_DEBIAN_PACKAGE_VERSION "${PACKAGE_VERSION}")
 set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Fred Klaus") #required
 set(CPACK_DEBIAN_PACKAGE_DEPENDS "libsdl-image1.2 (>= 1.2), libsdl1.2debian (>= 1.2)")
 set(CPACK_DEBIAN_PACKAGE_GROUP "System/Emulators/PC")
 set(CPACK_DEBIAN_PACKAGE_URL "https://www.rolandemu.de")
 
-set(CPACK_NSIS_PACKAGE_NAME "${PACKAGE_NAME}-${CMAKE_SYSTEM}")
+set(CPACK_NSIS_PACKAGE_NAME "${PACKAGE_NAME}")
 set(CPACK_NSIS_DISPLAY_NAME "${PACKAGE_TITLE}")
 set(CPACK_NSIS_CONTACT "development@rolandemu.de")
 
