--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ addons:
     - libsdl-image1.2-dev
 
 before_script:  
-    - cmake -H. -Bbuild -DCMAKE_BUILD_TYPE=Release -DPACKAGE_DEPLOY=DEB
+    - cmake -H. -Bbuild -DCMAKE_BUILD_TYPE=Release -DPACKAGE_DEPLOY=DEB -DPACKAGE_NUMBER=$TRAVIS_JOB_NUMBER
 
 script: 
     - cmake --build build --target package 
